--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "sass": "^1.70.0",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.15",
